Git_WGBH_QC/src/objects/WGBH_CheckSort_Contact__c.object
<CustomObject>
    <description>The employee responsible for distributing paychecks</description>
    <fields>
        <fullName>Code__c</fullName>
        <description>The employee id #</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of the employee who is the checksort</description>
        <label>First Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the employee an active checksort contact</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Teh last name of the employee who is the checksort contact</description>
        <label>Last Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>WGBH CheckSort Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Code__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <groups>ATS Admin</groups>
        </sharedTo>
    </listViews>
    <nameField>
        <label>WGBH CheckSort Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGBH CheckSort Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>